carrusel overflow fix

--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -72,6 +72,7 @@
     width: 100%;
     height: 250px;
     margin-top: 30px;
+    overflow: hidden;
 }
 .carousel img {
     width: 100%;
